[project]
name = "python-repl-mcp"
version = "0.1.0"
description = "A Model Context Protocol server providing Python REPL with multi-session support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "miloira" },
]
keywords = ["mcp", "python", "repl", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/miloira/python-repl-mcp"
Repository = "https://github.com/miloira/python-repl-mcp"
Issues = "https://github.com/miloira/python-repl-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
python-repl-mcp = "python_repl_mcp.server:main"
